--- a/angular.json
+++ b/angular.json
@@ -26,7 +26,8 @@
             ],
             "styles": [
               "src/styles.css",
-              "node_modules/mdb-ui-kit/css/mdb.min.css"
+              "node_modules/mdb-ui-kit/css/mdb.min.css",
+              "node_modules/bootstrap-icons/font/bootstrap-icons.min.css"
             ],
             "scripts": [
               "node_modules/mdb-ui-kit/js/mdb.min.js"
